--- a/dashboard.html
+++ b/dashboard.html
@@ -2,98 +2,76 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>لوحة تحكم المعهد - نظام OMA</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>لوحة التحكم - نظام OMA</title>
 <style>
 :root {
-  --primary:#004aad;
-  --accent:#ffcc33;
-  --bg:#f5f9ff;
-  --card:#ffffff;
+  --primary: #004aad;
+  --bg: #f5f9ff;
+  --card: #fff;
+  --accent: #ffcc33;
 }
 
 body {
-  font-family:'Cairo',sans-serif;
-  background:var(--bg);
-  margin:0;
-  min-height:100vh;
-  display:flex;
-  flex-direction:column;
+  font-family: 'Cairo', sans-serif;
+  background: var(--bg);
+  margin: 0;
+  padding: 0;
 }
 
 header {
-  background:var(--primary);
-  color:white;
-  text-align:center;
-  padding:15px;
-  font-size:20px;
-  font-weight:bold;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  gap:10px;
-}
-
-header img {
-  height:40px;
-  width:40px;
-  border-radius:50%;
-  object-fit:cover;
-  background:white;
+  background-color: var(--primary);
+  color: white;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .container {
-  flex:1;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:20px;
-  padding:30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 40px;
+  justify-content: center;
 }
 
 .card {
-  background:var(--card);
-  text-align:center;
-  border-radius:10px;
-  box-shadow:0 3px 10px rgba(0,0,0,0.1);
-  padding:30px;
-  transition:0.3s;
-  cursor:pointer;
+  background: var(--card);
+  padding: 30px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  transition: 0.3s;
+  cursor: pointer;
 }
+
 .card:hover {
-  transform:translateY(-5px);
-  background:#eef4ff;
+  transform: translateY(-5px);
+  background: var(--accent);
+  color: white;
 }
-.card h3 { color:var(--primary); }
+
+.card h3 { color: var(--primary); }
 
 #logoutBtn {
-  background:#d32f2f;
-  color:white;
-  border:none;
-  padding:12px 20px;
-  border-radius:8px;
-  cursor:pointer;
-  font-size:16px;
-  margin:30px auto;
-  display:block;
-  transition:0.3s;
+  background-color: #d32f2f;
+  color: white;
+  border: none;
+  padding: 12px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: 0.3s;
+  display: block;
+  margin: 30px auto;
 }
-#logoutBtn:hover { background:#b71c1c; }
-
-footer {
-  text-align:center;
-  padding:10px;
-  background:#eee;
-  font-size:14px;
-  color:#555;
-}
+#logoutBtn:hover { background-color: #b71c1c; }
 </style>
 </head>
 <body>
 
-<header>
-  <img id="instituteLogo" src="" alt="شعار المعهد">
-  <span id="instituteName">تحميل...</span>
-</header>
+<header id="dashboardHeader">👋 مرحباً بك في لوحة التحكم</header>
 
 <div class="container">
   <div class="card" id="studentsCard"><h3>📚 إدارة الطلاب</h3></div>
@@ -106,13 +84,11 @@ footer {
 
 <button id="logoutBtn">🔓 تسجيل الخروج</button>
 
-<footer>© 2025 نظام OMA لإدارة المعاهد</footer>
-
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
+// 🔹 Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -125,43 +101,10 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
-const db = getFirestore(app);
 
-const logoEl = document.getElementById("instituteLogo");
-const nameEl = document.getElementById("instituteName");
-const logoutBtn = document.getElementById("logoutBtn");
-
-// 🟢 منع الدخول بدون تسجيل
-onAuthStateChanged(auth, async(user)=>{
-  if(!user){
-    window.location.href = "institute-login.html";
-    return;
-  }
-
-  const instituteId = localStorage.getItem("instituteId");
-  if(!instituteId){
-    alert("تعذر تحميل بيانات المعهد.");
-    await signOut(auth);
-    return window.location.href = "institute-login.html";
-  }
-
-  // تحميل بيانات المعهد
-  const docSnap = await getDoc(doc(db, "institutes", instituteId));
-  if(docSnap.exists()){
-    const data = docSnap.data();
-    nameEl.textContent = data.name || "المعهد";
-    if(data.logoUrl) logoEl.src = data.logoUrl;
-
-    // تطبيق ألوان المعهد
-    if(data.colors){
-      document.documentElement.style.setProperty("--primary", data.colors.primary);
-      document.documentElement.style.setProperty("--bg", data.colors.bg);
-      document.documentElement.style.setProperty("--card", data.colors.card);
-      document.documentElement.style.setProperty("--accent", data.colors.accent);
-    }
-  } else {
-    nameEl.textContent = "بيانات المعهد غير موجودة";
-  }
+// ✅ منع الدخول إلا بعد تسجيل الدخول
+onAuthStateChanged(auth, (user) => {
+  if (!user) window.location.href = "institute-login.html";
 });
 
 // 🔘 التنقل بين الصفحات
@@ -173,20 +116,29 @@ const pageLinks = {
   settingsCard: "settings.html",
   financeCard: "finance.html"
 };
-Object.keys(pageLinks).forEach(id=>{
+
+Object.keys(pageLinks).forEach(id => {
   const el = document.getElementById(id);
-  if(el){
-    el.addEventListener("click", ()=>window.location.href = pageLinks[id]);
-  }
+  if (el) el.addEventListener("click", () => window.location.href = pageLinks[id]);
 });
 
-// 🔒 تسجيل الخروج
-logoutBtn.addEventListener("click", async()=>{
+// 🔒 زر تسجيل الخروج
+document.getElementById("logoutBtn").addEventListener("click", async () => {
   await signOut(auth);
-  localStorage.clear();
   alert("تم تسجيل الخروج بنجاح");
   window.location.href = "institute-login.html";
 });
+
+// 🎨 تطبيق ألوان المعهد من localStorage
+const colors = JSON.parse(localStorage.getItem("instituteColors") || "{}");
+if(colors.primary) document.documentElement.style.setProperty('--primary', colors.primary);
+if(colors.bg) document.documentElement.style.setProperty('--bg', colors.bg);
+if(colors.card) document.documentElement.style.setProperty('--card', colors.card);
+if(colors.accent) document.documentElement.style.setProperty('--accent', colors.accent);
+
+// تغيير اسم المعهد في الهيدر
+const instituteName = localStorage.getItem("instituteName") || "لوحة التحكم";
+document.getElementById("dashboardHeader").textContent = `👋 مرحباً بك في ${instituteName}`;
 </script>
 
 </body>
